--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="logo"><img src="logo/logo.jpg" alt="LifeTune Logo" style="width: 100%; height: 100%; object-fit: cover; border-radius: 16px;"></div>
                 <div class="app-title">LifeTune</div>
             </div>
-            <a class="telegram" href="https://t.me/Interlla" target="_blank">
+            <a class="telegram" href="https://t.me/lnterlla" target="_blank">
                 <img src="logo/telegram_logo.ico" alt="Telegram" style="width:22px;height:22px;vertical-align:middle;margin-right:7px;">
                 <span>Telegram</span>
             </a>
