--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
         <div class="footer-content">
             <div class="footer-text">
                 <h3 style="margin: 0 0 12px 0; color: #00ff99; font-size: 1.2rem;">LifeTune (Лайфтюн) — трекер сна и привычек</h3>
-                <p style="margin: 0; line-height: 1.6;">Ваш персональный помощник для здоровья, сна, привычек и продуктивности от разработчика Эгиева Магомеда</p>
+                <p style="margin: 0; line-height: 1.6;">Ваш персональный помощник</p>
             </div>
             <div class="footer-links">
                 <a href="https://t.me/lnterlla" class="footer-link" target="_blank">Telegram</a>
