--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LifeTune (Лайфтюн) — трекер сна и привычек от Эгиева Магомеда | Персональный помощник для здоровья</title>
+    <title>LifeTune (Лайфтюн) — трекер сна и привычек | Персональный помощник для здоровья</title>
     <meta name="description" content="LifeTune (Лайфтюн) — лучший трекер сна и привычек от разработчика Эгиева Магомеда. Анализ сна, трекер привычек, фитнес-мониторинг и голосовой ассистент в одном приложении. Скачать бесплатно из RuStore.">
     <meta name="keywords" content="лайфтюн, LifeTune, трекер сна, эгиев магомед, трекер привычек, анализ сна, фитнес-трекер, голосовой ассистент, здоровье, продуктивность, приложение, RuStore, бесплатно">
     <meta name="author" content="Egiev Magomed">
