--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>LifeTune (Лайфтюн) — трекер сна и привычек от Эгиева Магомеда | Персональный помощник для здоровья</title>
+    <title>LifeTune (Лайфтюн) — Персональный помощник</title>
     
     <!-- Защитные заголовки безопасности -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:;">
@@ -16,7 +16,7 @@
 
     <title>LifeTune (Лайфтюн) — трекер сна и привычек | Персональный помощник для здоровья</title>
 
-    <meta name="description" content="LifeTune (Лайфтюн) — лучший трекер сна и привычек от разработчика Эгиева Магомеда. Анализ сна, трекер привычек, фитнес-мониторинг и голосовой ассистент в одном приложении. Скачать бесплатно из RuStore.">
+    <meta name="description" content="LifeTune (Лайфтюн) — Персональный помощник. Анализ сна, трекер привычек, фитнес-мониторинг и голосовой ассистент в одном приложении. Скачать бесплатно из RuStore.">
     <meta name="keywords" content="лайфтюн, LifeTune, трекер сна, эгиев магомед, трекер привычек, анализ сна, фитнес-трекер, голосовой ассистент, здоровье, продуктивность, приложение, RuStore, бесплатно">
     <meta name="author" content="Egiev Magomed">
     <meta name="robots" content="index, follow">
