--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://lifetune.app/">
-    <meta property="twitter:title" content="LifeTune (Лайфтюн) — трекер сна и привычек от Эгиева Магомеда">
-    <meta property="twitter:description" content="Лучший трекер сна и привычек от разработчика Эгиева Магомеда. Анализ сна, трекер привычек, фитнес-мониторинг и голосовой ассистент в одном приложении.">
+    <meta property="twitter:title" content="LifeTune (Лайфтюн) — Персональный помощник">
+    <meta property="twitter:description" content="LifeTune (Лайфтюн) — Персональный помощник. Анализ сна, трекер привычек, фитнес-мониторинг и голосовой ассистент в одном приложении.">
     <meta property="twitter:image" content="https://lifetune.app/logo/logo.jpg">
     
     <!-- Favicon -->
@@ -69,7 +69,7 @@
         "@context": "https://schema.org",
         "@type": "SoftwareApplication",
         "name": "LifeTune (Лайфтюн)",
-        "description": "Трекер сна и привычек от разработчика Эгиева Магомеда. Анализ сна, трекер привычек, фитнес-мониторинг и голосовой ассистент в одном приложении.",
+        "description": "Персональный помощник. Анализ сна, трекер привычек, фитнес-мониторинг и голосовой ассистент в одном приложении.",
         "applicationCategory": "HealthApplication",
         "operatingSystem": "Android",
         "author": {
