--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://lifetune.app/">
-    <meta property="og:title" content="LifeTune (Лайфтюн) — трекер сна и привычек от Эгиева Магомеда">
-    <meta property="og:description" content="Лучший трекер сна и привычек от разработчика Эгиева Магомеда. Анализ сна, трекер привычек, фитнес-мониторинг и голосовой ассистент в одном приложении.">
+    <meta property="og:title" content="LifeTune (Лайфтюн)  — Персональный помощник>
+    <meta property="og:description" content="Персональный помощник. Анализ сна, трекер привычек, фитнес-мониторинг и голосовой ассистент в одном приложении.">
     <meta property="og:image" content="https://lifetune.app/logo/logo.jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
