--- a/index.html
+++ b/index.html
@@ -299,10 +299,10 @@
         <div class="main-content scroll-reveal" data-reveal-idx="3">
             <div class="screenshots">
                 <div class="screenshot" data-img="Images/1.png"><img src="Images/12.png" alt="Скриншот 1" style="width:100%;height:100%;object-fit:cover;border-radius:16px;"></div>
-                <div class="screenshot" data-img="Images/2.png"><img src="Images/2.png" alt="Скриншот 2" style="width:100%;height:100%;object-fit:cover;border-radius:16px;"></div>
+<!--                 <div class="screenshot" data-img="Images/2.png"><img src="Images/2.png" alt="Скриншот 2" style="width:100%;height:100%;object-fit:cover;border-radius:16px;"></div>
                 <div class="screenshot" data-img="Images/4.png"><img src="Images/4.png" alt="Скриншот 3" style="width:100%;height:100%;object-fit:cover;border-radius:16px;"></div>
                 <div class="screenshot" data-img="Images/5.png"><img src="Images/5.png" alt="Скриншот 4" style="width:100%;height:100%;object-fit:cover;border-radius:16px;"></div>
-                <div class="screenshot" data-img="Images/6.png"><img src="Images/6.png" alt="Скриншот 5" style="width:100%;height:100%;object-fit:cover;border-radius:16px;"></div>
+                <div class="screenshot" data-img="Images/6.png"><img src="Images/6.png" alt="Скриншот 5" style="width:100%;height:100%;object-fit:cover;border-radius:16px;"></div> -->
             </div>
             <div class="qr-block" itemscope itemtype="https://schema.org/SoftwareApplication">
                 <div class="qr"><img src="Images/QR-код.png" alt="QR-код для скачивания LifeTune" style="width:100%;height:100%;object-fit:contain;border-radius:12px;"></div>
@@ -451,11 +451,11 @@
     <script>
     // --- Галерея скриншотов с навигацией ---
     const screenshots = [
-      'Images/1.png',
-      'Images/2.png',
-      'Images/4.png',
-      'Images/5.png',
-      'Images/6.png'
+      'Images/12.png',
+      // 'Images/2.png',
+      // 'Images/4.png',
+      // 'Images/5.png',
+      // 'Images/6.png'
     ];
     let currentIndex = 0;
     function openModal(index) {
